k8s-yaml/pgadmin/dp.yaml
kind: Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: pgadmin
  name: pgadmin
  namespace: armory
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 7
  selector:
    matchLabels:
      name: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
        name: pgadmin
    spec:
      containers:
      - name: minio
        image: harbor.od.com/public/pgadmin:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/pgadmin
          name: data
      imagePullSecrets:
      - name: harbor
      volumes:
      - nfs:
          server: hdss7-200.host.com
          path: /data/nfs-volume/pgadmin
        name: data
