k8s-yaml/pgadmin/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: armory
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: pgadmin
