k8s-yaml/pgadmin/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: pgadmin
  namespace: armory
spec:
  rules:
  - host: pg.od.com
    http:
      paths:
      - path: /
        backend:
          serviceName: pgadmin
          servicePort: 80
